--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-llama-index-core>=0.10.11.post1,<0.11.0
+llama-index-core==0.9.48
 llama-index-llms-gemini==0.1.4
 llama-index-embeddings-gemini==0.1.4
 google-generativeai==0.3.2
